--- a/index.html
+++ b/index.html
@@ -6,26 +6,31 @@
     <script type="text/javascript" src="code.js"></script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NV</title>
+    <title>Numerical solver for linear systems</title>
 </head>
 <body>
     <div class="main">
       <label id="title">Gauss – Seidel Method Calculator</label>
-      <div class="equation-box" type="number" required>
+      <div>
         <textarea id="box" class="matrix" placeholder="Enter coefficients"></textarea>
         <textarea id="solution" class="solution"></textarea>
       </div>
       <div>
-        <label id="title">Counter:</label>
-        <input id="counter" type="number" min="1" step="1" value="1" placeholder="NOE">
+        <label id="title">Iterations:</label>
+        <input type="number" min="1" max="1000" step="1" value="1">
         <label id="title">Seed:</label>
-        <input id="seed" type="number" min="0" step="1" value="0" placeholder="Seed">
+        <input type="number" min="0" max="1000" step="1" value="0">
       </div>
       <div id="buttons">
-          <button id="button1" value="calculate" onclick="calculate()">Calculate</button>
-          <button id="button2" type="reset" onclick="reset()">Reset</button>
+          <button id="button1" onclick="calculate()">Calculate</button>
+          <button id="button2" onclick="reset()">Reset</button>
       </div>
       <div id="answer"></div>
+    </div>
+    <div class="main">
+      <div>Mostafa Hesham Allam</div>
+      <div>Abdel-Rahman Emad</div>
+      <div>Karim Amro lialy</div>
     </div>
 </body>
 </html>
