--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script type="text/javascript" src="code.js"></script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
     <title>Numerical solver for linear systems</title>
 </head>
 <body>
@@ -28,9 +29,12 @@
       <div id="answer"></div>
     </div>
     <div class="main">
-      <div>Mostafa Hesham Allam</div>
-      <div>Abdel-Rahman Emad</div>
-      <div>Karim Amro lialy</div>
+      <div>How to use</div>
+      <div id="instructions">
+       <div>Enter coefficients seperated by space,</div>
+       <div> constants in vertical box</div>
+       <div>Seed : Initial value of 1st iteration</div>
+      </div>
     </div>
 </body>
 </html>
