--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <p id="instructions">
           Mostafa Hesham Allam - 20206126 - 7<br />
           Abdulrahman Emad Ismail - 20206148 - 120<br />
-          Karim Amro Hamdy - 20206138 - 61 <br />
+          Karim Amr Hamdy - 20206138 - 61 <br />
       </p>
       <div class="title">Under the supervision of</div>
       <p id="instructions">Dr. Eng. Mostafa Reda A. El Tantawi</p>
