--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <button id="button1" onclick="calculate()">Calculate</button>
           <button id="button2" onclick="reset()">Reset</button>
       </div>
-      <div class="fade" id="answer"></div>
+      <div id="answer"></div>
     </div>
     <div class="main fade" id="instruct">
       <div class="instructions">How to use</div> 
