--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
           <a><img src="fci.png" align="right" class="scale-image"></a>
          </div>
       </div>
-      <div class="title">About</div>
+      <div class="title">Gauss-Seidel Calculator</div>
       <p id="instructions">
-          This is a calculator for solving linear system <br/>
-          of equations using gauss-seidel method <br/>
+          Created by Software Engineering students<br/>
+          2nd year : 2021/2022 <br/>
+          For direct contact : mostafa777444333@gmail.com
       </p>
       <button id="button" onclick="Start()">Start</button>
-      <div class="title">Team members</div>
+      <div class="title">Submitted by</div>
       <p id="instructions">
           Mostafa Hesham Allam - 20206126 - 7<br />
           Abdulrahman Emad Ismail - 20206148 - 120<br />
